# ROOT_helper

./: .gitignore  README.md  ROOT_helper.cc  ROOT_helper.h  test_ROOT_helper.cc
src/: CMakeLists.txt  ROOT_helper.h
src/auxiliary/: rootlogon.C
src/core/: CMakeLists.txt  analysis.cpp  container.cpp  data_saver.cpp  graphics.cpp
src/core/include/ROOT_helper/: ROOT_helper.h  analysis.h  container.h  data_saver.h  graphics.h
src/exec/: test_graphics.cpp
src/implementation/: CMakeLists.txt  test_graphics.cpp
test_macro/: test_graphics.cpp
